--- a/page2.html
+++ b/page2.html
@@ -76,7 +76,7 @@
 
 <!-- logo name end -->
 
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <!-- <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -113,41 +113,40 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div> -->
 
-<!-- Side bar start -->
-  <!-- <nav class="nav flex-column">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link disabled">Disabled</a>
-  </nav> -->
 
-  <!-- Side bar End -->
 
-<br><br>
+
+
+
   <!-- IMAGES START -->
+
   <div class="container">
   <div class=" row row-cols-1 row-cols-md-3 g-4 ">
     <div class="col">
       <div class="card h-100">
-       <a href="jihan.html"> <img src="jannat ke pattay novel.jpg" class="card-img-top" alt="..."></a>
+       <a href="#"> <img src="khudsekhudatk.webp"  class="card-img-top" alt="..."></a>
         <div class="card-body">
-          <h5 class="card-title">Jannat k Pattay</h5>
-          <p class="card-text">Jannat Ke Pattay is a story of Courage, Reality, Struggle and Faith which makes Novel Reader Thrilled, Fascinated and Awed. </p>
+          <h5 class="card-title">khud se khuda tk</h5>
+          <p class="card-text">Khud se Khuda tak book is written by Muhammad Nasir Iftikhar. It is a novel, divided into three parts, 
+            subdivided into thirty-six chapters and each chapter has a different topic. It is based on psychological and spiritual awakening. This book is written in the 
+            light of Quran Kareem and almost every chapter is explained with Quranic verses. This book contains sound knowledge about human nafs, their traps, and their 
+            solutions. </p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.800</p>
+          <p class="text-body-secondary">Rs.1,190</p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="salar.html"> <img src="Peer-E-Kamil.webp" height="410" class="card-img-top" alt="..."></a>
+       <a href="#"> <img src="MASHAF.jpg"  class="card-img-top" alt="..."></a>
         <div class="card-body">
-          <h5 class="card-title">Peer-e-Kamil</h5>
-          <p class="card-text">Peer-e-Kamil novel authored by Umaira Ahmed.This is one of the most famous novel of Umaira Ahmed which contains an interesting socail romantic 
-            and moral reforming story in the Urdu languauge.
+          <h5 class="card-title">Mushaf</h5>
+          <p class="card-text">Mushaf is the most extra-ordinary, intellectual and creatively written fictional story by Nimra Ahmed, who is one of the best,
+             inspirational and thought-provoking writers of Pakistan. The name of the novel “MUSHAF” (Arabic name of the Holy Quran) gives us a hint that it is a story
+              related to religious content or it might contain some verses with beautiful meaning and deep tafseer.
           </p>
         </div>
         <div class="card-footer">
@@ -157,125 +156,127 @@
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="salar2.html"> <img src="aby-e-hayat.jpg"  class="card-img-top" alt="..."></a>
+       <a href="#"> <img src="alif.webp"  class="card-img-top" alt="..."></a>
         <div class="card-body">
-          <h5 class="card-title">Aby-e-Hayat</h5>
-          <p class="card-text">Aab e Hayat Novel Complete is a book by Umera Ahmed, a great novelist, and writer. It is a great novel that is a sequel of Peer e Kamil.</p>
+          <h5 class="card-title">Alif</h5>
+          <p class="card-text">Alif is a fictional family novel by Umera Ahmed. This novel explores the connection of spirituality and fiction. For those who have read or
+             know about Umera Ahmed’s work like Aab e Hayat and Peer E Kamil, Alif is a treat to read. It was a welcome surprise for Umera Ahmed fans and non-fans alike. </p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.700</p>
+          <p class="text-body-secondary">Rs.1200</p>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- 1st Row Images End -->
-<br><br>
+<!--1st Row Images End -->
 
+<br><br>
   <!-- 2nd Row Images Start -->
 
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="Nama.jpg" class="card-img-top" alt="...">
+        <img src="harf-se-lafz-tak.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Namal</h5>
-          <p class="card-text">Namal(نمل)is a long Urdu novel full of suspense, horror, and surprises written by Nimra Ahmed which has set a record of favorites. </p>
+          <h5 class="card-title">Harf Se Lafz Tak</h5>
+          <p class="card-text">Harf Se Lafz Tak is Social Romantic story, famouse Urdu Novel Online Reading at Urdu Novel Collection.
+            Umera Ahmed is an established writer and writing regularly. The novel Harf Se Lafz Tak Complete Novel By Umera Ahmed </p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.1800</p>
+          <p class="text-body-secondary">Rs.195</p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="halem.jpg" height="450" class="card-img-top" alt="...">
+        <img src="Apni-Talash.webp"  class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Haalim</h5>
-          <p class="card-text">Haalim is an excellent time travel Urdu novel written by Nimra Ahmed
-            full of suspense, thrills, adventure, and all the ingredients of a great fantasy story.
+          <h5 class="card-title">Apni Talash</h5>
+          <p class="card-text">Apni Talash (Self-Actualization) written by Qasim Ali Shah The collection of motivational and developmental
+             speeches and lectures book of Qasim Ali Shah in the Urdu language. He is additionally sharing his experience, astuteness, and information 
+             that will be useful for those who need to think about Self Discovery. This is the best book.
           </p>
-        </div>
-        <div class="card-footer">
-          <p class="text-body-secondary">Rs.500</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="Amar-Bail-Novel.jpg"  class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Amar bail</h5>
-          <p class="card-text">Amar Bell is an inspiring book about an unusual subject.
-             This is evident in the way in which the story is told, and the ending will leave its reader with a feeling of sadness.</p>
         </div>
         <div class="card-footer">
           <p class="text-body-secondary">Rs.600</p>
         </div>
       </div>
     </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="Karakoram-Ka-Taj-Mahal.webp"  class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">karakoram-ka-taj-mehal</h5>
+          <p class="card-text">The highlight of the book is when Parishay fulfils her life-long dream of scaling the mountains and making her father and family proud.
+             Overall, the entire story revolves around dreams being shattered and still not giving up, sorrow, happiness, laughter and then the scenic beauty of the northern
+              areas of Pakistan.</p>
+        </div>
+        <div class="card-footer">
+          <p class="text-body-secondary">Rs.900</p>
+        </div>
+      </div>
+    </div>
   </div>
+<!-- 2nd Row Images End -->
 
+<br><br>
 
-<!-- 2nd Row End -->
-
-  <br><br>
-  
   <!-- 3rd Row Start -->
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="neelam-ka-markat.jpg" class="card-img-top" alt="...">
+        <img src="Gumaan.jpg" height="450" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Neelam-Ka-Markat</h5>
-          <p class="card-text"> Neelam ka markat novel is written by Deeba Tabassum.  Neelam ka markat is very comprehensive and beautiful novel of  Deeba Tabassum. She turned her heart's voice into words very amazingly. You will love "Neelam ka markat" 
-            novel because it is an action thriller novel and it has a lot of action sequences. I found the story very interesting. </p>
+          <h5 class="card-title">Gumaan</h5>
+          <p class="card-text">Gumaan' is one of the most popular collections of Urdu Ghazals and Manzoomaat/ poetry by Jaun Elia. 
+            Decorated with the Award 'Akadmi Adabiyat' (2004) by the Govt. of Pakistan.Guman is becoming one the most famous novel now a days . Many people are reading it  </p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.600</p>
+          <p class="text-body-secondary">Rs.1000</p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="ishq-e-atish.jpg" height="450" class="card-img-top" alt="...">
+        <img src="La-Hasil.jpg" height="450" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Ishq-e-Aatish</h5>
-          <p class="card-text">Ishq-e-Aatish Novel Authoerd By Sadia Rajpoot. Ishq e Atish is romantic novel written by Sadia Rajpoot.It is a love story 
-            that revolves around the lives of the main charachters, who are deeply in love but face numerous obstacels in their relationship. The is set
-            in a traditional pakistani society and reflects the culutral values and beliefs of the time.
+          <h5 class="card-title">La-Hasil</h5>
+          <p class="card-text">This book shows us how to bring yourself from filth and walking to the straight good path as in a path of self-righteousness and rectification. 
+            It tells a person finding a bright path full of light after spending your whole life in dark by the most merciful, most beneficent-Allah the almighty. Basically,
+             it tells us a story of individuals who faced different situation in life.
             
           </p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.400</p>
+          <p class="text-body-secondary">Rs.1300</p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="jab zindagi shuru.jpg_480Wx480H"  class="card-img-top" alt="...">
+        <img src="rab-say-jurny-ka-safar.jpeg" height="450" width="100"  class="card-img-top pt-4" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Jab Zindagi Shuru Hogi</h5>
-          <p class="card-text">“Jab Zindagi Shuru Hogi” by Abu Yahya is a famous Urdu Novel which is read by Millions of readers.
-            It provides a comprehensive sketch of the events and life in the Hereafter in the form of an interesting novel.
-            Its an unforgettable tale and a life-changing book which will strengthen your belief in God and the Hereafter.</p>
+          <h5 class="card-title">Rab-say-jurny-ka-safar</h5>
+          <p class="card-text">This is the story of a girl who is a normal human being like you and me, but she wants to connect with her ALLAH by responding to the voice of her soul in this world.</p>
         </div>
         <div class="card-footer">
-          <p class="text-body-secondary">Rs.300</p>
+          <p class="text-body-secondary">Rs.450</p>
         </div>
       </div>
     </div>
   </div>
 
 
-
 </div>
-
   <!-- Images End -->
+
+
 <br><br>
+
+
   <!-- pagination start -->
 
 
@@ -296,7 +297,13 @@
 </div>
 
 <!-- pagination End -->
+
+
 <br><br>
+
+
+
+
   <!-- Footer Start -->
 
   <div class="row pt-5" style="background-color: #cecece;">
