--- a/salar2.html
+++ b/salar2.html
@@ -33,8 +33,8 @@
                   Type
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Relegious</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="indexb (1).html">Relegious</a></li>
+                  <li><a class="dropdown-item" href="indexb (1).html">Action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="quotes.html">Quotes</a></li>
                 </ul>
@@ -148,6 +148,32 @@
             First published March 1, 2012</p>
       </div>
     </div>
+
+
+    <!-- Images End -->
+    <br><br><br><br>
+
+
+
+<!-- Comment Section Start -->
+
+
+<div  class="ps-5 row">
+  <div class="col-lg-6 col-md-5 col-sm-12">
+    <h4>Add Comment</h4>
+    <br>
+  <div class="mb-3 ">
+    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <input type="email" class="form-control is-invalid" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Comment</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  </div>
+</div>
+  
+  <!-- Comment Section End -->
 </div>
 
 
