--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <div>
-          <a class="navbar-brand" href="#"><img src="bookb.jpg" height="100px" width="100px" alt=""> </a>
+          <a class="navbar-brand" href="indexb (1).html"><img src="bookb.jpg" height="100px" width="100px" alt=""> </a>
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,8 +40,8 @@
                   Type
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Relegious</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="indexb (1).html">Relegious</a></li>
+                  <li><a class="dropdown-item" href="indexb (1).html">Action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="quotes.html">Quotes</a></li>
                 </ul>
