--- a/indexb (1).html
+++ b/indexb (1).html
@@ -7,7 +7,7 @@
     <title>NW</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="bookb.jpg" type="image/x-icon">
+    <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
@@ -23,10 +23,10 @@
  
 
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+ <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <div>
-      <a class="navbar-brand" href="indexb (1).html"><img src="bookb.jpg" height="100px" width="100px" alt=""> </a>
+      <a class="navbar-brand" href="indexb (1).html"><img src="Free_Sample_By_Wix (1).jpg" height="100px" width="100px" alt=""> </a>
     </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,10 +55,15 @@
             <a class="nav-link " href="login.html">Contact Us</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
+        
+        <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href="login.html">
+          <svg class="bi" aria-hidden="true"><use xlink:href="#clipboard"></use></svg>
+          <i class="bi bi-person" style="font-size: 25px; color: rgb(19, 75, 19);" ></i>
+        </a>
+        <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </nav>
@@ -66,15 +71,8 @@
   <!-- Nav End -->
 
 
-<!-- Logo Name -->
 
-  <div>
-  <p class="h4 ps-5">NW</p> <p class="ps-4" style="font-family:cursive;">Novels World</p>
-
-
-</div>
-
-<!-- logo name end -->
+<!-- Slide Start -->
 
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
@@ -113,21 +111,42 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div> 
 
-<!-- Side bar start -->
-  <!-- <nav class="nav flex-column">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link disabled">Disabled</a>
-  </nav> -->
+<!-- Slide End -->
+  <br><br>
+<!-- Side bar start  -->
+ <div class="row ">
 
-  <!-- Side bar End -->
+   <nav class="nav flex-column col-lg-2 col-md-2 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
+    <h4 style="color: rgb(65, 64, 64);">Writers Names </h4>
+    <a class="nav-link active" style="color: rgb(8, 85, 8); " aria-current="page" href="#">Nimra Ahmed</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Umera Ahmed</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Nabeela Abr Raja</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Ismat Chughtai</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Areej Shah</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bapsi Sidhwa</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Razia Butt</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Ashfaq Ahmad</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bano Qudsia</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Imran </a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Yusra Shah</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Aleem ul Haq</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Qurratulain Hyder</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Mustansar Hussain</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Kubra Naveed</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Farhat Ishtiaq.</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
+  </nav>  
+
+   <!-- Side bar End -->
 
 <br><br>
+
   <!-- IMAGES START -->
-  <div class="container">
+ 
+  <div class="container col-md-9 col-lg-9 col-sm-12">
   <div class=" row row-cols-1 row-cols-md-3 g-4 ">
     <div class="col">
       <div class="card h-100">
@@ -167,15 +186,15 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 
   <!-- 1st Row Images End -->
 <br><br>
 
   <!-- 2nd Row Images Start -->
 
-
-  <div class="row row-cols-1 row-cols-md-3 g-4">
+ 
+   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
         <img src="Nama.jpg" class="card-img-top" alt="...">
@@ -215,7 +234,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 
 
 <!-- 2nd Row End -->
@@ -224,7 +243,7 @@
   
   <!-- 3rd Row Start -->
 
-  <div class="row row-cols-1 row-cols-md-3 g-4">
+   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
         <img src="neelam-ka-markat.jpg" class="card-img-top" alt="...">
@@ -274,22 +293,24 @@
 
 </div>
 
+</div> 
+
   <!-- Images End -->
 <br><br>
   <!-- pagination start -->
 
 
-  <div class="container">
+  <div class="container loop">
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center" >
-        <li class="page-item disabled" >
-          <a class="page-link" href="indexb (1).html" style="color: rgb(32, 32, 32);">Previous</a>
+        <li class="page-item " >
+          <a class="page-link"  href="indexb (1).html" style="color: rgb(32, 32, 32);">Previous</a>
         </li>
         <li class="page-item" ><a class="page-link" href="indexb (1).html" style="color: rgb(32, 32, 32);">1</a></li>
         <li class="page-item"><a class="page-link" href="page2.html" style="color: rgb(32, 32, 32);">2</a></li>
         <li class="page-item"><a class="page-link" href="#" style="color: rgb(32, 32, 32);">3</a></li>
         <li class="page-item">
-          <a class="page-link disabled" style="color: rgb(32, 32, 32);" href="page2.html">Next</a>
+          <a class="page-link" style="color: rgb(32, 32, 32);" href="page2.html">Next</a>
         </li>
       </ul>
     </nav>
@@ -299,7 +320,7 @@
 <br><br>
   <!-- Footer Start -->
 
-  <div class="row pt-5" style="background-color: #cecece;">
+ <div class="row pt-5" style="background-color: #cecece;">
     <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
       <ul>
         <li class="h5" style="color: rgb(5, 5, 88);">MAIN MENU</li>
@@ -309,7 +330,7 @@
       </ul>
     </div>
 
-    <div class="col-md-4 col-sm-12 col-lg-4">
+    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
       <ul>
         <li class="h5" style="color: rgb(5, 5, 88);"> HELP</li>
         <li class="pt-2">Search Bar</li>
@@ -318,7 +339,7 @@
       </ul>
     </div>
 
-    <div class="col-md-4 col-sm-12 col-lg-4">
+    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
       <ul>
         <li class="h5" style="color: rgb(5, 5, 88);">SECURITY</li>
         <li class="pt-2">Privacy Policy</li>
@@ -331,7 +352,7 @@
       <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: rgb(71, 71, 71);"></i></a>
       <a href="https://web.whatsapp.com" target="_blank"><i class="bi bi-whatsapp" style="color: rgb(71, 71, 71);"></i></a>
     </div>
-  </div>
+  </div> 
 
 
   <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
