--- a/indexb (1).html
+++ b/indexb (1).html
@@ -120,8 +120,8 @@
 
    <nav class="nav flex-column col-lg-2 col-md-2 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
     <h4 style="color: rgb(65, 64, 64);">Writers Names </h4>
-    <a class="nav-link active" style="color: rgb(8, 85, 8); " aria-current="page" href="#">Nimra Ahmed</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Umera Ahmed</a>
+    <a class="nav-link active" style="color: rgb(8, 85, 8); " aria-current="page" href="nimra-ahmed.html">Nimra Ahmed</a>
+    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="umera-ahmeed.html">Umera Ahmed</a>
     <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Nabeela Abr Raja</a>
     <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Ismat Chughtai</a>
     <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Areej Shah</a>
