--- a/page2.html
+++ b/page2.html
@@ -66,54 +66,35 @@
   <!-- Nav End -->
 
 
-<!-- Logo Name -->
+<!-- Side bar start  -->
+<div class="row ">
 
-  <div>
-  <p class="h4 ps-5">NW</p> <p class="ps-4" style="font-family:cursive;">Novels World</p>
+  <nav class="nav flex-column col-lg-2 col-md-2 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
+   <h4 style="color: rgb(65, 64, 64);">Writers Names </h4>
+   <a class="nav-link active" style="color: rgb(8, 85, 8); " aria-current="page" href="nimra-ahmed.html">Nimra Ahmed</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="umera-ahmeed.html">Umera Ahmed</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Nabeela Abr Raja</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Ismat Chughtai</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Areej Shah</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bapsi Sidhwa</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Razia Butt</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Ashfaq Ahmad</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bano Qudsia</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Imran </a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Yusra Shah</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Aleem ul Haq</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Qurratulain Hyder</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Mustansar Hussain</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Kubra Naveed</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Farhat Ishtiaq.</a>
+   <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
+ </nav>  
 
+  <!-- Side bar End -->
 
-</div>
+<br><br>
 
-<!-- logo name end -->
-
-  <!-- <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="hijab.jpg" height="600" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Jannat K Pattay</h5>
-          <p>Complete Novel By Nimra Ahmed</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="muslim-islam.jpg" height="600" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Peer-e-Kamil</h5>
-          <p>Complete Novel By Umera Ahmed</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="ring.jfif" height="600" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Aby-E-Hayat</h5>
-          <p>Complete Novel By Umera Ahmed (Peer-e-Kamil part II)</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> -->
 
 
 
@@ -122,7 +103,7 @@
 
   <!-- IMAGES START -->
 
-  <div class="container">
+  <div class="container col-md-9 col-lg-9 col-sm-12">
   <div class=" row row-cols-1 row-cols-md-3 g-4 ">
     <div class="col">
       <div class="card h-100">
@@ -276,7 +257,7 @@
 
 <br><br>
 
-
+<br><br>
   <!-- pagination start -->
 
 
