--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       list-style-type: none;
     }
   </style>
-<body>
+<body style="background-image: url(books.jpg); background-color: white; opacity: 90%; height: 100%; width: 100%;  ">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -70,7 +70,7 @@
     </div> -->
     
     <!-- logo name end -->
-    <div class="container">
+    <div class="container shadow p-3 mb-5 bg-body-tertiary rounded" style="margin-top: 50px;>
     <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4">
           <label for="validationCustom01" class="form-label">First name</label>
