--- a/aboutUs.html
+++ b/aboutUs.html
@@ -66,6 +66,18 @@
     <h6 style="text-align: center;">Welcome to <a href="indexb (1).html">NW (Novels World)</a></h6>
     <p style="text-align: center; font-size: large;">Online Books Outlet provides best solution to buy books online in Pakistan at single click. Online Book Outlet provides facility to pay cash on delivery, only pay once books is in your hands.
          Free Cash on Delivery services available. Online Books Outlet only deals in original books with competitive rates. So, what are you waiting for ? start shopping NOW !</p>
+         <p style="text-align: center; font-size: large;">
+          Reading is like an adventure which gives you immense experience of different feelings and take you out from your routine to a new imaginative world making hour moments delighted and your heart pleased.
+          The purpose of making this website is to heal the reader's soul with the medicine of words and giving passionate writers a platform to showcase their magic and present their master pieces.
+          <br><br>
+          We hope you enjoy these novels as much as we enjoy offering them to you.
+          <br><br>
+          If you have any questions or comments, please don't hesitate to contact us. 
+          <br><br>
+          Sincerely, 
+          <br><br>
+          Novels World
+         </p>
          
          <br>
          <p style="text-align: center; font-size: large;">Remember FULL CART WAS NEVER SO CHEAP.</p>
