--- a/indexb (1).html
+++ b/indexb (1).html
@@ -97,14 +97,14 @@
       <div class="carousel-item">
         <img src="muslim-islam.jpg" height="600" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5 style="text-shadow: 2px 2px 8px #eaeaec;">Peer-e-Kamil</h5>
+          <h5 style="text-shadow: 2px 2px 8px #968703;">Peer-e-Kamil</h5>
           <p>Complete Novel By Umera Ahmed</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="ring.jfif" height="600" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5  style="text-shadow: 2px 2px 8px #eaeaec;">Aby-E-Hayat</h5>
+          <h5  style="text-shadow: 2px 2px 8px #806800;">Aby-E-Hayat</h5>
           <p>Complete Novel By Umera Ahmed (Peer-e-Kamil part II)</p>
         </div>
       </div>
