--- a/sign-in.html
+++ b/sign-in.html
@@ -10,8 +10,49 @@
     <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
+	
 
 </head>
+
+<script>
+
+function signin(){
+
+	var user1 = localStorage.getItem('user');
+	var pass1 = localStorage.getItem('pass');
+
+     function signin(){
+        var sysuser = document.getElementById("signin-email").value;
+        var syspass = document.getElementById("signin-password").value;
+
+        if(sysuser == user1 && syspass == pass1){
+
+            document.getElementById('myform').action = "index.html";
+     
+        }
+        else{
+
+          alert("Your username or password is incorrect!")
+        }
+
+    }
+
+}
+
+function signup(){
+
+var username = document.getElementById("signup-username").value;
+var email= document.getElementById("signup-email").value;
+var password = document.getElementById("signup-password").value;
+
+localStorage.setItem('user' , username);
+localStorage.setItem('pass' , password );
+
+
+}
+
+
+</script>
 <body>
 <!-- partial:index.partial.html -->
 
@@ -86,7 +127,7 @@
 			</ul>
 
 			<div id="login">
-				<form class="form">
+				<form class="form" id="myform">
 					<p class="fieldset">
 						<label class="image-replace email" for="signin-email">E-mail</label>
 						<input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
@@ -106,7 +147,7 @@
 					</p>
 
 					<p class="fieldset">
-						<input class="full-width" type="submit" value="Login">
+						<input class="full-width" type="submit" value="Login" onclick="signin()">
 					</p>
 				</form>
 				
@@ -141,7 +182,7 @@
 					</p>
 
 					<p class="fieldset">
-						<input class="full-width has-padding" type="submit" value="Create account">
+						<input class="full-width has-padding" type="submit" value="Create account" onclick="signup()">
 					</p>
 				</form>
 
@@ -172,7 +213,9 @@
 
 
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script  src="script.js"></script>
+  
 
 </body>
 </html>
