--- a/nimra-ahmed.html
+++ b/nimra-ahmed.html
@@ -336,40 +336,40 @@
 <br><br>
 <br><br>
   <!-- Footer Start -->
-
- <div class="row pt-5" style="background-color: #cecece;">
+  
+  <div class="row pt-5" style="background-color: rgb(9, 9, 54)">
     <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);">MAIN MENU</li>
-        <li class="pt-2">Home</li>
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;">MAIN MENU</li>
+        <li class="pt-2" style="color: rgb(180, 177, 177);">Home</li>
         <li class="pt-1">About Us</li>
         <li class="pt-1">Contact Us</li>
       </ul>
     </div>
-
-    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);"> HELP</li>
+  
+    <div class="col-md-4 col-sm-12 col-lg-4">
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;"> HELP</li>
         <li class="pt-2">Search Bar</li>
         <li class="pt-1">About Us</li>
         <li class="pt-1">Contact Us</li>
       </ul>
     </div>
-
-    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);">SECURITY</li>
+  
+    <div class="col-md-4 col-sm-12 col-lg-4">
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;">SECURITY</li>
         <li class="pt-2">Privacy Policy</li>
         <li class="pt-1">Terms and Condition</li>
         
       </ul>
     </div>
-    <div style="text-align: center;" class="pt-3">
-     <a href="https://www.instagram.com" target="_blank"> <i class="bi bi-instagram" style="color: rgb(71, 71, 71);" ></i></a>
-      <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: rgb(71, 71, 71);"></i></a>
-      <a href="https://web.whatsapp.com" target="_blank"><i class="bi bi-whatsapp" style="color: rgb(71, 71, 71);"></i></a>
+    <div style="text-align: center; color:rgb(180, 177, 177);" class="pt-3" >
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-whatsapp"></i>
     </div>
-  </div> 
+  </div>
 
 
   <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
