--- a/indexb (1).html
+++ b/indexb (1).html
@@ -127,24 +127,24 @@
 
    <nav class="nav flex-column col-lg-2 col-md-2 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
     <h4 style="color: rgb(65, 64, 64);">Writers Names </h4>
-    <a class="nav-link active" style="color: rgb(8, 85, 8); " aria-current="page" href="nimra-ahmed.html">Nimra Ahmed</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="umera-ahmeed.html">Umera Ahmed</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="#">Nabeela Abr Raja</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Ismat Chughtai</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Areej Shah</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bapsi Sidhwa</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Razia Butt</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Ashfaq Ahmad</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Bano Qudsia</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Imran </a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Yusra Shah</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Aleem ul Haq</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Qurratulain Hyder</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Mustansar Hussain</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">  Kubra Naveed</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href=""> Farhat Ishtiaq.</a>
-    <a class="nav-link" style="color: rgb(8, 85, 8);"  href="">Saadat Hasan Manto</a>
+    <a class="nav-link active" style="color: rgb(110, 110, 5); " aria-current="page" href="nimra-ahmed.html">Nimra Ahmed</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="umera-ahmeed.html">Umera Ahmed</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="#">Nabeela Abr Raja</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href=""> Ismat Chughtai</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Areej Shah</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Bapsi Sidhwa</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Razia Butt</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Ashfaq Ahmad</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Bano Qudsia</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Imran </a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Saadat Hasan Manto</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Yusra Shah</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Aleem ul Haq</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href=""> Qurratulain Hyder</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">  Mustansar Hussain</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">  Kubra Naveed</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href=""> Farhat Ishtiaq.</a>
+    <a class="nav-link" style="color: rgb(110, 110, 5);"  href="">Saadat Hasan Manto</a>
   </nav>  
 
    <!-- Side bar End -->
@@ -327,39 +327,39 @@
 <br><br>
   <!-- Footer Start -->
 
- <div class="row pt-5" style="background-color: #cecece;">
+  <div class="row pt-5" style="background-color: rgb(9, 9, 54)">
     <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);">MAIN MENU</li>
-        <li class="pt-2">Home</li>
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;">MAIN MENU</li>
+        <li class="pt-2" style="color: rgb(180, 177, 177);">Home</li>
         <li class="pt-1">About Us</li>
         <li class="pt-1">Contact Us</li>
       </ul>
     </div>
-
-    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);"> HELP</li>
+  
+    <div class="col-md-4 col-sm-12 col-lg-4">
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;"> HELP</li>
         <li class="pt-2">Search Bar</li>
         <li class="pt-1">About Us</li>
         <li class="pt-1">Contact Us</li>
       </ul>
     </div>
-
-    <div class="col-md-4 col-sm-12 col-lg-4 ps-5 ">
-      <ul>
-        <li class="h5" style="color: rgb(5, 5, 88);">SECURITY</li>
+  
+    <div class="col-md-4 col-sm-12 col-lg-4">
+      <ul style="color: rgb(180, 177, 177);">
+        <li class="h5" style="color: white;">SECURITY</li>
         <li class="pt-2">Privacy Policy</li>
         <li class="pt-1">Terms and Condition</li>
         
       </ul>
     </div>
-    <div style="text-align: center;" class="pt-3">
-     <a href="https://www.instagram.com" target="_blank"> <i class="bi bi-instagram" style="color: rgb(71, 71, 71);" ></i></a>
-      <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: rgb(71, 71, 71);"></i></a>
-      <a href="https://web.whatsapp.com" target="_blank"><i class="bi bi-whatsapp" style="color: rgb(71, 71, 71);"></i></a>
+    <div style="text-align: center; color:rgb(180, 177, 177);" class="pt-3" >
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-whatsapp"></i>
     </div>
-  </div> 
+  </div>
 
 
   <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
