--- a/indexb (1).html
+++ b/indexb (1).html
@@ -7,7 +7,7 @@
     <title>NW</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
+    <link rel="icon" href="137416910_padded_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
 </head>
@@ -28,7 +28,7 @@
  
 
 
-  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-3 mb-5 " style=" background-color: #040436; " >
+  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-2 mb-5 " style=" background-color: #040436; " >
     <div class="container-fluid"  >
       <div>
       <a class="navbar-brand" href="indexb (1).html"><img src="137416910_padded_logo.png" height="100px" width="100px" alt=""> </a>
@@ -60,6 +60,9 @@
             <a class="nav-link" href="quotes.html" style="color: white;">Quotes</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="nasheed.html" style="color: white;">Nasheeds</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link " href="contactus.html" style="color: white;">Contact Us</a>
           </li>
         </ul>
@@ -76,7 +79,7 @@
 
   <!-- Nav End -->
 
-  <br><br><br><br><br>
+  <br><br><br><br>
 
 <!-- Slide Start -->
 
@@ -169,7 +172,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="salar.html"> <img src="Peer-E-Kamil.webp" height="410" class="card-img-top" alt="..."></a>
+       <a href="salar.html"> <img src="Peer-E-Kamil.webp" class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">Peer-e-Kamil</h5>
           <p class="card-text">Peer-e-Kamil novel authored by Umaira Ahmed.This is one of the most famous novel of Umaira Ahmed which contains an interesting socail romantic 
@@ -216,7 +219,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="halem.jpg" height="450" class="card-img-top" alt="...">
+        <img src="halem.jpg" height="400" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Haalim</h5>
           <p class="card-text">Haalim is an excellent time travel Urdu novel written by Nimra Ahmed
@@ -266,7 +269,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="ishq-e-atish.jpg" height="450" class="card-img-top" alt="...">
+        <img src="ishq-e-atish.jpg"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Ishq-e-Aatish</h5>
           <p class="card-text">Ishq-e-Aatish Novel Authoerd By Sadia Rajpoot. Ishq e Atish is romantic novel written by Sadia Rajpoot.It is a love story 
