--- a/quotes.html
+++ b/quotes.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
+    <link rel="icon" href="137416910_padded_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
 
@@ -219,8 +219,9 @@ window.addEventListener("scroll", reveal);
 
 <body style="background-color: #fffdfd;">
 
-  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-1 mb-5" style=" background-color: #040436; " >
-    <div class="container-fluid"  >
+  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-1 mb-5" style=" background-color: #040436; height: 120px;" >
+    <div class="container-fluid" >
+
       <div>
       <a class="navbar-brand" href="indexb (1).html"><img src="137416910_padded_logo.png" height="100px" width="100px" alt=""> </a>
     </div>
@@ -249,6 +250,9 @@ window.addEventListener("scroll", reveal);
           </li>
           <li class="nav-item">
             <a class="nav-link" href="quotes.html" style="color: white;">Quotes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nasheed.html" style="color: white;">Nasheeds</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="contactus.html" style="color: white;">Contact Us</a>
@@ -285,7 +289,7 @@ window.addEventListener("scroll", reveal);
                 <br><br>
   
                 <div class="border border-top-0 border-secondary-subtle rounded-bottom shadow p-3 mb-5 bg-body-tertiary rounded">
-                  <h1 style="color: rgb(0, 95, 0);">URDU QUOTES</h1>
+                  <h1 style="color: rgb(5, 5, 100);">URDU QUOTES</h1>
                 </div>
   
   
@@ -786,7 +790,7 @@ window.addEventListener("scroll", reveal);
 
     </li>
     <li class="page-item" ><a class="page-link" href="quotes.html" style="color: rgb(21, 156, 21);">1</a></li>
-    <li class="page-item"><a class="page-link" href="quote2.html" style="color: rgb(21, 156, 21);">2</a></li>
+    <li class="page-item"><a class="page-link" href="quotes2.html" style="color: rgb(21, 156, 21);">2</a></li>
     
     <li class="page-item">
       <a class="page-link" href="quote2.html" aria-label="Next" style="color: rgb(21, 156, 21);">
