--- a/salar2.html
+++ b/salar2.html
@@ -7,11 +7,11 @@
     <title>NW</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
+    <link rel="icon" href="137416910_padded_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-3 mb-5" style=" background-color: #040436;" >
+  <nav class="navbar navbar-expand-lg   fixed-top shadow  p-2 mb-5" style=" background-color: #040436;" >
     <div class="container-fluid"  >
       <div>
       <a class="navbar-brand" href="indexb (1).html"><img src="137416910_padded_logo.png" height="100px" width="100px" alt=""> </a>
@@ -41,6 +41,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="quotes.html" style="color: white;">Quotes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nasheed.html" style="color: white;">Nasheeds</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="contactus.html" style="color: white;">Contact Us</a>
@@ -173,7 +176,7 @@
     <br>
   <div class="mb-3 ">
     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-    <input type="email" class="form-control is-invalid" id="exampleFormControlInput1" placeholder="name@example.com">
+    <input type="email" class="form-control " id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
   <div class="mb-3">
     <label for="exampleFormControlTextarea1" class="form-label">Comment</label>
