--- a/sign-in.html
+++ b/sign-in.html
@@ -7,9 +7,10 @@
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="Free_Sample_By_Wix (1).jpg" type="image/x-icon">
+    <link rel="icon" href="137416910_padded_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
 	
 
 </head>
@@ -56,7 +57,7 @@ localStorage.setItem('pass' , password );
 <body>
 <!-- partial:index.partial.html -->
 
-<nav class="navbar navbar-expand-lg   fixed-top shadow  p-3 mb-5" style=" background-color: #040436;" >
+<nav class="navbar navbar-expand-lg   fixed-top shadow  p-2 mb-5" style=" background-color: #040436;" >
     <div class="container-fluid"  >
       <div>
       <a class="navbar-brand" href="indexb (1).html"><img src="137416910_padded_logo.png" height="100px" width="100px" alt=""> </a>
@@ -87,6 +88,9 @@ localStorage.setItem('pass' , password );
           <li class="nav-item">
             <a class="nav-link" href="quotes.html" style="color: white;">Quotes</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link" href="nasheed.html" style="color: white;">Nasheeds</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link " href="contactus.html" style="color: white;">Contact Us</a>
           </li>
@@ -115,8 +119,8 @@ localStorage.setItem('pass' , password );
 		<li><a class="signup" href="#0">Sign up</a></li>
 	</ul>
 </nav>
-
-<div class="user-modal">
+<div class="row">
+<div class="user-modal  col-md-10 col-sm-12 col-lg-10">
 
 	<br><br><br><br><br><br><br><br>
 
@@ -212,7 +216,7 @@ localStorage.setItem('pass' , password );
 <!-- partial -->
 
 
-
+</div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script  src="script.js"></script>
   
