--- a/page2.html
+++ b/page2.html
@@ -115,7 +115,7 @@
   <div class=" row row-cols-1 row-cols-md-3 g-4 ">
     <div class="col">
       <div class="card h-100">
-       <a href="#"> <img src="khudsekhudatk.webp"  class="card-img-top" alt="..."></a>
+       <a href="khud-sy-khuda-tk.html"> <img src="khudsekhudatk.webp"  class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">khud se khuda tk</h5>
           <p class="card-text">Khud se Khuda tak book is written by Muhammad Nasir Iftikhar. It is a novel, divided into three parts, 
@@ -130,7 +130,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="#"> <img src="MASHAF.jpg"  class="card-img-top" alt="..."></a>
+       <a href="mushaf.html"> <img src="MASHAF.jpg"  class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">Mushaf</h5>
           <p class="card-text">Mushaf is the most extra-ordinary, intellectual and creatively written fictional story by Nimra Ahmed, who is one of the best,
@@ -145,7 +145,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="#"> <img src="alif.webp"  class="card-img-top" alt="..."></a>
+       <a href="alif.html"> <img src="alif.webp"  class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">Alif</h5>
           <p class="card-text">Alif is a fictional family novel by Umera Ahmed. This novel explores the connection of spirituality and fiction. For those who have read or
