--- a/nasheed.html
+++ b/nasheed.html
@@ -73,7 +73,8 @@
 				<p>co-founder - Manager</p>
 				<br>
 				<div class="author_desc">
-				   <p>It is a long established fact that a reader will be distracted the readable content of a page at layout.</p>
+				   <p>Nasheeds: The Hymns of Jihad. In the Muslim world, the nasheed (plural, anasheed)
+					 is <span> a song without musical instruments with lyrics that resemble hymns that praise God (Allah). </span> The person who sings a nasheed is called a munshid.</p>
 				</div>
 
                  <!-- <div class="buttons">
@@ -107,8 +108,8 @@
 				   <p id="message">New</p>
 				</div>
 				<div id="actions_2">
-				  <p><a href="allah calls you mid night.mp3"><i class='bx bx-share' ></i></a></p>
-				  <p><a href="2.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="#"><i class='bx bx-share' ></i></a></p>
+				  <p><a href=" allah calls you mid night.mp3 " download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -129,7 +130,7 @@
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="1.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - My Hope Allah Muhammad Al Muqit Perfect Slowed Reverb With Relaxing Rain MenTal7262 -VlaqSqV5a4s-192k-1691500628.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -150,7 +151,7 @@
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="3.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - Dar Al ghoroor Ahmed Bukhatir أحمد بوخاطر دار الغرور-MWAkHcGEEOc-192k-1691533393.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -170,7 +171,7 @@
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="4.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - baraa_masoud___love_and_life_____vocals_only_براء_مسعود___حب_وحياة___بدون_موسيقى-coInHMUQzCg-128k-1691533964.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -185,12 +186,12 @@
 				<div id="song_desc">
 					 <p>Tabalagh Bellqaleel</p>
 				     <p>Osama Ali Safi</p>
-				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;2000+</p>
+				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;1500+</p>
 				</div>
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="5.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - Tabalagh Bellqaleel-xNyk45lTXOI-64k-1691534097.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -205,12 +206,12 @@
 				<div id="song_desc">
 					 <p>Sabilu Dumu</p>
 				     <p> Muhammad al Muqit</p>
-				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;2000+</p>
+				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;1500+</p>
 				</div>
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="5.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - Sabeelu Dummu Slowed Reverb -RV7Zzpbb7uI-64k-1691534989.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
@@ -225,16 +226,64 @@
 				<div id="song_desc">
 					 <p>Tabsirah The Enlightening</p>
 				     <p>Muhammad Al Muqit</p>
-				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;2000+</p>
+				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;1000+</p>
 				</div>
 
 				<div id="actions_2">
 				  <p><i class='bx bx-share' ></i></p>
-				  <p><a href="5.mp3" download><i class='bx bx-download'></i></a></p>
+				  <p><a href="y2mate.is - Tabsirah The Enlightening Nasheed by Muhammad Al Muqit-hOpMC4DiLjs-64k-1691535152.mp3" download><i class='bx bx-download'></i></a></p>
+				</div>
+			</div>
+
+
+			<div id="track">
+				<img src="mosque-5773586_1280.jpg" alt="">
+				<div id="actions">
+					<a href="#"><i class='bx bx-heart' ></i></a>
+					<a id="play_pause" href="y2mate.com - Maula Ya Salli  Sami Yusuf ft Qasida Burda Shareef  Slowed  Reverb.mp3"><i class='bx bx-play'></i></a>
+				</div>
+				<audio src="y2mate.com - Maula Ya Salli  Sami Yusuf ft Qasida Burda Shareef  Slowed  Reverb.mp3" id="music"></audio>
+
+				<div id="song_desc">
+					 <p>Tabsirah The Enlightening</p>
+				     <p>Muhammad Al Muqit</p>
+				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;1000+</p>
+				</div>
+
+				<div id="actions_2">
+				  <p><i class='bx bx-share' ></i></p>
+				  <p><a href="y2mate.com - Maula Ya Salli  Sami Yusuf ft Qasida Burda Shareef  Slowed  Reverb.mp3" download><i class='bx bx-download'></i></a></p>
+				</div>
+			</div>
+
+
+
+			<div id="track">
+				<img src="sheikh-zayed-grand-mosque-4010762_1280.jpg" alt="">
+				<div id="actions">
+					<a href="#"><i class='bx bx-heart' ></i></a>
+					<a id="play_pause" href="y2mate.com - أيا من يدعي الفهم  مشاري راشد العفاسي.mp3"><i class='bx bx-play'></i></a>
+				</div>
+				<audio src="y2mate.com - أيا من يدعي الفهم  مشاري راشد العفاسي.mp3" id="music"></audio>
+
+				<div id="song_desc">
+					 <p>Tabsirah The Enlightening</p>
+				     <p>Muhammad Al Muqit</p>
+				     <p id="total_download"><i class='bx bx-download'></i>&nbsp;&nbsp;1000+</p>
+				</div>
+
+				<div id="actions_2">
+				  <p><i class='bx bx-share' ></i></p>
+				  <p><a href="y2mate.com - أيا من يدعي الفهم  مشاري راشد العفاسي.mp3" download><i class='bx bx-download'></i></a></p>
 				</div>
 			</div>
 
 		</div>
+
+
+		<!-- nasheeds end -->
+
+
 
         <!-- user comments part -->
 		<div class="user_comments" id="user_comments">
@@ -244,7 +293,7 @@
 
            	 <div class="comment">
            	 	<div id="user_p">
-           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;karl rock</p>
+           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;@mohafary</p>
            	 		<p></p>
            	 	</div>
            	 	<div id="user_c">
@@ -258,7 +307,7 @@
 
            	 <div class="comment">
            	 	<div id="user_p">
-           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;karl rock</p>
+           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;@_llsdl</p>
            	 		<p></p>
            	 	</div>
            	 	<div id="user_c">
@@ -275,7 +324,7 @@
 
            	 <div class="comment">
            	 	<div id="user_p">
-           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;karl rock</p>
+           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;@abufarha4386</p>
            	 		<p></p>
            	 	</div>
            	 	<div id="user_c">
@@ -290,7 +339,7 @@
 
            	<div class="comment">
            	 	<div id="user_p">
-           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;karl rock</p>
+           	 		<p><i class='bx bx-user' ></i>&nbsp;&nbsp;@ayeshanoor9555</p>
            	 		<p></p>
            	 	</div>
            	 	<div id="user_c">
