--- a/umera-ahmeed.html
+++ b/umera-ahmeed.html
@@ -149,7 +149,7 @@
       </div>
     
     
-      <div class="col-md-8 col-sm-12 col-lg-8" style="color: rgb(102, 100, 100);" >
+      <div class="col-md-9 col-sm-12 col-lg-9 ps-2" style="color: rgb(102, 100, 100);" >
     <h2 style="color: rgb(66, 66, 66);">UMERA AHMED</h2> <br>
     <p>Umera Ahmed is a fictional story writer, she writes about the social realities. Most of her dramas Are about deep truths spoken out on the screen.</p>
     <br>
